--- a/wordcounter/templates/wordcounter/count.html
+++ b/wordcounter/templates/wordcounter/count.html
@@ -17,7 +17,7 @@
     <div class="count">
         <div class="result">
             <h2> Wordcounter 결과입니다</h2>
-            <h3>당신이 입력한 텍스트는 {{total}}<!--총 단어 수-->개로 구성되어 있습니다.</h3>
+            <h3>당신이 입력한 텍스트는 {{total}}<!--총 단어 수-->어절로 구성되어 있습니다.</h3>
             <a href="{% url 'home' %}">다시 하기</a>
         </div>
         <div class="input">
